launchpad-buildd (213) UNRELEASED; urgency=medium

  * Dynamically generate configuration file in lpbuildd.tests.harness.
  * Remove unnecessary "slave" component from some file names.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 20 Apr 2022 16:03:01 +0100

launchpad-buildd (212) focal; urgency=medium

  * Ensure that launchpad-buildd runs with lxd as a supplementary group.
  * Fix use of shallow clones for OCI builds, which regressed in version 211
    (LP: #1968630).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Apr 2022 17:33:31 +0100

launchpad-buildd (211) focal; urgency=medium

  * Use "git checkout" rather than "git clone -b", since that allows
    checking out by commit ID.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Apr 2022 21:52:14 +0100

launchpad-buildd (210) bionic; urgency=medium

  * Stop building with dpkg-deb -Zgzip; we no longer need to install on
    lucid.
  * Make more loop device nodes available in LXD containers (LP: #1963706).
  * Drop pre-Python-3.6 code using pyupgrade.
  * Fix gathering the output of charm recipe builds that use --build-path.
  * Convert daemon startup to systemd.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 17 Mar 2022 15:41:49 +0000

launchpad-buildd (209) bionic; urgency=medium

  * Upgrade charm to bionic and Python 3.
  * Remove Python 2 support.
  * Unversion python-debian requirement, since the minimum version required
    was very old (pre-xenial) and the version of the packaged python-debian
    confuses modern pip/setuptools (see
    https://bugs.launchpad.net/bugs/1926870).
  * Depend on dnsmasq-base.  The LXD backend needs this, but it's no longer
    in cloud images as of focal.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 21 Feb 2022 17:11:33 +0000

launchpad-buildd (208) bionic; urgency=medium

  [ Jürgen Gmach ]
  * Adjust updated command line option for the CI runner.
  * Publish documentation on Read the Docs. 

  [ Colin Watson ]