@@ -14,3 +14,4 @@ debian/*.debhelper
 debian/*.substvars
 .tox/
 docs/_build/
+venv/
