@@ -58,6 +58,8 @@ class CIBuildManager(BuildManagerProxyMixin, DebianBuildManager):
         self.revocation_endpoint = extra_args.get("revocation_endpoint")
         self.proxy_service = None
         self.job_status = {}
+        self.apt_repositories = extra_args.get("apt_repositories")
+        self.environment_variables = extra_args.get("environment_variables")
 
         super().initiate(files, chroot, extra_args)
 
@@ -76,6 +78,13 @@ class CIBuildManager(BuildManagerProxyMixin, DebianBuildManager):
             args.extend(["--git-repository", self.git_repository])
         if self.git_path is not None:
             args.extend(["--git-path", self.git_path])
+        if self.apt_repositories is not None:
+            for repository in self.apt_repositories:
+                args.extend(["--apt-repository", repository])
+        if self.environment_variables is not None:
+            for key, value in self.environment_variables.items():
+                args.extend(
+                    ["--environment-variable", "%s=%s" % (key, value)])
         try:
             snap_store_proxy_url = self._builder._config.get(
                 "proxy", "snapstore")
